# AI-GameMaster

./: FRONTEND_SPEC.md  Frontend Plan.md  INTEGRATION_PLAN.md  LOGGING_GUIDE.md  audio_manifest.json  audio_texts.json  Функциональные требования
backend/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2001c4cd71c8_initial_models.py  20260408_rebuild_schema_v2.py  20260409_users_display_name.py  (+2 more)
backend/api/: deps.py
backend/core/: config.py  database.py  exceptions.py  logging.py  logging_middleware.py  utils.py
backend/docs/: backend_documentation.md  backend_plan.md  backend_specs.md
backend/models/: __init__.py  day_vote.py  dev_test_lobby_link.py  game_action.py  game_event.py  game_phase.py  night_action.py  payment.py  player.py  player_role.py  refresh_token.py  role.py  session.py  session_player.py  session_role.py  subscription.py  user.py
backend/schemas/: ai.py  auth.py  dev.py  game.py  role.py  session.py  subscription.py  user.py  validators.py
backend/scripts/: run_e2e_five_players.py  seed.py
backend/services/: audio_manifest.py  auth_service.py  chat_service.py  dev_test_lobby_service.py  game_engine.py  lobby_service.py  narration_audio.py  narration_script.py  night_action_resolver.py  pause_service.py  phase_manager.py  recovery_service.py  role_catalog.py  runtime_state.py  session_service.py  state_service.py  timer_service.py  ws_manager.py
backend/tests/: conftest.py  test_smoke_openapi.py
(+254 files in other folders)
